--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -35,7 +35,7 @@
                 console.warn(`In production, change the base url in payment.ejs from http://127.0.0.1:4000/api/v1/gate/open to https://prickly-cummerbund-lamb.cyclic.app/api/v1/gate/open`)
                 
                 // Update the Open variable in Gate
-                fetch("http://127.0.0.1:4000/api/v1/gate/open")
+                fetch("https://prickly-cummerbund-lamb.cyclic.app/api/v1/gate/open")
                 .then(response=>response.text())
                 .then(response=>{
                     console.log(response);
@@ -43,7 +43,7 @@
                 .catch(err=>console.log(err))
 
                 // Update the Transaction and Slot
-                fetch("http://127.0.0.1:4000/api/v1/transactions/updateTransactionAndSlotAsUnoccupied", {
+                fetch("https://prickly-cummerbund-lamb.cyclic.app/api/v1/transactions/updateTransactionAndSlotAsUnoccupied", {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
