--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -55,6 +55,7 @@
                     console.log(response);
                 })
                 .catch(err=>console.log(err))
+                window.location = '/success-page';
             },
            "cancel": function() {
                 // This function will be called when the payment is cancelled
