--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -55,6 +55,30 @@
                     console.log(response);
                 })
                 .catch(err=>console.log(err))
+
+                /////////////////
+                
+                var myHeaders = new Headers();
+                myHeaders.append("Content-Type", "application/json");
+
+                var raw = JSON.stringify({
+                "vehicleNo": "TN-SRM"
+                });
+
+                var requestOptions = {
+                method: 'POST',
+                headers: myHeaders,
+                body: raw,
+                redirect: 'follow'
+                };
+
+                fetch("https://prickly-cummerbund-lamb.cyclic.app/api/v1/transactions", requestOptions)
+                .then(response => response.text())
+                .then(result => console.log(result))
+                .catch(error => console.log('error', error));
+
+                ////////////////
+
                 window.location = '/success-page';
             },
            "cancel": function() {
